--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;700&display=swap');
-@font-face {
-    font-family: 'Pretendard Variable';
-    font-weight: 45 920;
-    font-style: normal;
-    font-display: swap;
-    src: url('./woff2/PretendardVariable.woff2') format('woff2-variations');
-}
+@import url('https://webfontworld.github.io/pretendard/Pretendard.css');
 
 :root {
     font-family: 'EB Garamond', serif;
