--- a/src/index.css
+++ b/src/index.css
@@ -33,14 +33,14 @@
     --foundation-blue-dark-hover: #001958;
     --foundation-blue-dark-active: #001342;
     --foundation-blue-darker: #000f33;
-    --foundation-white-light: #FCFCFC;
-    --foundation-white-light-hover: #FAFAFA;
-    --foundation-white-light-active: #F5F5F5;
-    --foundation-white-normal: #E0E0E0;
-    --foundation-white-normal-hover: #CACACA;
-    --foundation-white-normal-active: #B3B3B3;
-    --foundation-white-dark: #A8A8A8;
+    --foundation-white-light: #fcfcfc;
+    --foundation-white-light-hover: #fafafa;
+    --foundation-white-light-active: #f5f5f5;
+    --foundation-white-normal: #e0e0e0;
+    --foundation-white-normal-hover: #cacaca;
+    --foundation-white-normal-active: #b3b3b3;
+    --foundation-white-dark: #a8a8a8;
     --foundation-white-dark-hover: #868686;
     --foundation-white-dark-active: #656565;
-    --foundation-white-darker: #4E4E4E;
+    --foundation-white-darker: #4e4e4e;
 }
